--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,8 +1,7 @@
 {
     "builds": [{
         "src": "backend/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.12.5"}
+        "use": "@vercel/python"
     }],
     "routes": [
         {
